[project]
name = "beampipe-wallaby"
version = "0.0.1"
description = "Survey module for WALLABY HI-res discovery"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "astropy>=5.0",
  "astroquery>=0.4",
]

[project.entry-points."beampipe.projects"]
wallaby_hires = "wallaby_hires.module"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
